2005-11-01  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/c.m4 (AC_PROG_CC_C_O): Remove the comment about 8+3
	filesystems.

2005-11-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* NEWS: Move AH_HEADER mention to right place.

2005-10-27  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/c.m4 (AC_PROG_CC_C_O): "conftst2" -> "conftest2"
	* lib/autoconf/fortran.m4 (_AC_PROG_FC_C_O): Likewise.

2005-10-25  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/c.m4 (AC_PROG_CC_C_O): rm -f conftst2.*, not only
	conftst2.$ac_objext.
	* lib/autoconf/fortran.m4 (_AC_PROG_FC_C_O): Likewise.

2005-10-24  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/c.m4 (AC_PROG_CC_C_O): Use conftst2.o instead of
	conftest.o, to see whether the compiler really obeys; rm the object
	file before and after the test and register it with ac_clean_files.
	* lib/autoconf/fortran.m4 (_AC_PROG_FC_C_O): Likewise.

2005-10-21  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/status.m4 (_AC_OUTPUT_FILES_PREPARE): When determining,
	the delimiter CEOF$ac_eof: fix quoting of CEOF[0-9]* and modify the 
	code so that the most common case requires less forks.

2005-10-20  Stepan Kasal  <kasal@ucw.cz>

	* doc/autoconf.texi (Shell Substitutions}: Document that ${10} is
	not portable; thanks to Paul Eggert and Alexandre.

	* NEWS: Fix an old typo.

2005-10-20  Jim Meyering  <jim@meyering.net>

	* doc/autoconf.texi: Typo: s/feature/features/ in ``the features of
	the latter'', in two places.

2005-10-19  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Generating Sources): AC_LANG_PROGRAMS ->
	AC_LANG_PROGRAM, fixing a typo.  Don't give details about
	the inner workings of AC_LANG_FUNC_LINK_TRY.
	* lib/autoconf/c.m4 (AC_LANG_CALL(C)): Reformat to match
	AC_LANG_FUNC_LINK_TRY.  This involves returning the value returned
	by the function rather than ignoring it.
	(AC_LANG_FUNC_LINK_TRY(C)): Call the function rather than simply
	comparing its address.  Intel's interprocedural optimization was